force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Stores information about a student&apos;s application to an educational institution or program.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>