force-app/main/default/objects/Application__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact applying to the institution or program.</description>
    <inlineHelpText>The Contact applying to the institution or program.</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Applicant)</relationshipLabel>
    <relationshipName>Applications_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>