force-app/main/default/objects/Application__c/fields/Applicant_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Decision_Date__c</fullName>
    <description>The date when the student decides whether to enroll.</description>
    <inlineHelpText>The date when the student decides whether to enroll.</inlineHelpText>
    <label>Applicant Decision Date</label>
    <type>Date</type>
</CustomField>