force-app/main/default/objects/Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>The date and time when the application was submitted.</description>
    <inlineHelpText>The date and time when the application was submitted.</inlineHelpText>
    <label>Application Date</label>
    <type>DateTime</type>
</CustomField>