force-app/main/default/objects/Application__c/fields/Application_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Decision_Date__c</fullName>
    <description>The date when the institution decides whether to accept the applicant.</description>
    <inlineHelpText>The date when the institution decides whether to accept the applicant.</inlineHelpText>
    <label>Application Decision Date</label>
    <type>Date</type>
</CustomField>