force-app/main/default/objects/Application__c/fields/Application_JSON__c.field-meta.xml
<CustomField>
    <fullName>Application_JSON__c</fullName>
    <description>A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
    <inlineHelpText/>
    <label>Application JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>