force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The status of the application process.</description>
    <inlineHelpText>The status of the application process.</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Admit</fullName>
            </value>
            <value>
                <fullName>Admit with Conditions</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Deferred Offer</fullName>
            </value>
            <value>
                <fullName>Accepted Offer</fullName>
            </value>
            <value>
                <fullName>Declined Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>