force-app/main/default/objects/Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>The type of program or track the applicant is applying to.</description>
    <inlineHelpText>The type of program or track the applicant is applying to.</inlineHelpText>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>