force-app/main/default/objects/Application__c/fields/Applying_To__c.field-meta.xml
<CustomField>
    <fullName>Applying_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The academic program or major the applicant is applying to.</description>
    <inlineHelpText>The academic program or major the applicant is applying to.</inlineHelpText>
    <label>Applying To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>