force-app/main/default/objects/Application__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date by which applicants must submit an application.</description>
    <inlineHelpText>The date by which applicants must submit an application.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>