force-app/main/default/objects/Application__c/fields/Initial_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Creation_Date__c</fullName>
    <description>The date the application was initially created by the applicant.</description>
    <inlineHelpText>The date the application was initially created by the applicant.</inlineHelpText>
    <label>Initial Creation Date</label>
    <type>Date</type>
</CustomField>