force-app/main/default/objects/Application__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>The date when applicants can submit an application.</description>
    <inlineHelpText>The date when applicants can submit an application.</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>