force-app/main/default/objects/Application__c/fields/Preparer__c.field-meta.xml
<CustomField>
    <fullName>Preparer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact preparing the application, often a guardian.</description>
    <inlineHelpText>The Contact preparing the application. For example, a guardian or a person assisting someone with special needs.</inlineHelpText>
    <label>Preparer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Preparer)</relationshipLabel>
    <relationshipName>Applications_Preparer</relationshipName>
    <type>Lookup</type>
</CustomField>